<resources>
    <string name="app_name">MooVie</string>
    <string name="action_settings">Settings</string>
    <string name="search">search</string>
    <string name="choose_language">Language</string>
    <string name="search_hint">eg: movie title</string>
    <string name="action_about">about</string>
    <string name="OK">OK</string>
    <string name="CANCEL">CANCEL</string>
    <string-array name="title_movies">
        <item>A Star is Born</item>
        <item>Aquaman</item>
        <item>Avengers Infinity War</item>
        <item>BirdBox</item>
        <item>Bohemian Rhapsody</item>
        <item>BumbleBee</item>
        <item>Creed II</item>
        <item>DeadPool 2</item>
        <item>How To Train Your Dragon The Hidden World</item>
        <item>Dragon Ball Broly The Movie</item>
        <item>Glass</item>
        <item>Hunter Killer</item>
        <item>Marry Poppins Returns</item>
        <item>Mortal Engines</item>
        <item>Preman Pensiun</item>
        <item>Robin Hood</item>
        <item>SpiderMan: Into The Spider Verse</item>
        <item>The Girl In The Spider\'s Web</item>
        <item>The Mule</item>
        <item>Venom</item>
    </string-array>
    <string-array name="ph_movies">
        <item>Warner Bros. Pictures</item>
        <item>DC Entertainment</item>
        <item>Marvel Studios</item>
        <item>Netflix</item>
        <item>GK Films</item>
        <item>Hasbro</item>
        <item>MGM Pictures, Warner Bros</item>
        <item>20th Century Fox, Marvel</item>
        <item>DreamWorks</item>
        <item>Toei, Fox International</item>
        <item>Universal Pictures</item>
        <item>HK Productions</item>
        <item>Walt Disney</item>
        <item>MRC</item>
        <item>MNC Pictures</item>
        <item>Summit Entertainment</item>
        <item>Sony, Columbia Pictures, Marvel</item>
        <item>Columbia Pictures, MGM</item>
        <item>Warner Bros</item>
        <item>Columbia, Marvel</item>
    </string-array>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin
        \n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin
    </string>
    <string name="rating">rating</string>
    <string name="more_info">More Info</string>
    <string name="title_movie_trailer">Movie Trailer</string>
    <string name="family">Family</string>
    <string name="bookmarks">Bookmark</string>
    <string name="tv_detail_title_storyline">Storyline</string>
</resources>